--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  json_annotation: ^2.0.0
+  bloc_pattern: ^1.5.2
+  rxdart: ^0.21.0
+
   flutter_masked_text: ^0.8.0
   font_awesome_flutter: ^8.4.0
   flutter_staggered_grid_view: ^0.2.7
@@ -38,7 +42,6 @@ dependencies:
   firebase_auth: ^0.8.2
   url_launcher: ^5.0.2
   image_picker: ^0.6.0+1
-  rxdart: ^0.21.0
   percent_indicator: ^1.0.16
   modal_progress_hud: ^0.1.3
 
